# prototyping_wasm

./: README.md
client/src/: bindings.rs
copy_data/client/: Cargo.toml
copy_data/client/src/: lib.rs
copy_data/client/wit/: world.wit
copy_data/host/: Cargo.toml
dlt_official_parser/: Cargo.toml
dlt_official_parser/src/: bindings.rs  lib.rs
dlt_parser/: Cargo.toml
dlt_parser/src/: bindings.rs  lib.rs
function_as_resource/client/src/: bindings.rs  lib.rs
function_as_resource/host/: Cargo.toml
function_as_resource/host/src/: bindings.rs  main.rs
function_as_resource/host/wit/: count.wit
hello_c/c_client/: counting.c  counting.h  my-component.wasm  my-core.wasm  my_component.c
hello_c/client/: Cargo.toml
hello_c/client/src/: lib.rs
hello_c/host/src/: bindings.rs  main.rs
hello_c/host/wit/: count.wit
host/src/: main.rs
