[package]
name = "dlt_official_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
plugins_api = {path = "../../chipmunk/application/apps/indexer/plugins_api", features = ["parser"]}
parsers = {path = "../../chipmunk_one/application/apps/indexer/parsers"}

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:dlt-official-parser"

[package.metadata.component.dependencies]
